--- a/Jama/src/main/webapp/prove.xhtml
+++ b/Jama/src/main/webapp/prove.xhtml
@@ -9,7 +9,10 @@
 	<p>  Benvenuto in Jama</p>
 	<h:form>
 		Premendo il pulsante verra avviato il lavoro specificato in TestBean.doJob()
-		<h:commandButton value="doJob" action="#{testBean.doJob()}" />
+		<h:commandButton value="doJob" action="#{testBean.doJob1()}" />
+				<h:commandButton value="doJob" action="#{testBean.doJob2()}" />
+				<h:commandButton value="doJob" action="#{testBean.doJob3()}" />
+		
 	</h:form>
 </body> 
 </html>
