--- a/Jama/src/main/webapp/resources/sections/wizShareTable.xhtml
+++ b/Jama/src/main/webapp/resources/sections/wizShareTable.xhtml
@@ -1,12 +1,20 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+<html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:composite="http://java.sun.com/jsf/composite">
+	
+	<composite:interface>
+		<composite:attribute name="shareTableController"></composite:attribute>
+		
+	
+	</composite:interface>
+	
+	<composite:implementation>
 
-	<ui:debug />
 
-	<p:tab id="tabRip" title="Passo 2">
+
 		<p:panel header="Tabella di ripartizione">
 
 			<h:panelGrid columns="3" columnClasses="label, value, errorMessage"
@@ -15,80 +23,80 @@
 
 				<h:outputText value="#{msgs.shareTableCapitalBalance}:" />
 				<h:inputText id="atheneumCapitalBalance"
-					value="#{shareTablePCB.shareTable.atheneumCapitalBalance}"
+					value="#{cc.attrs.shareTableController.shareTable.atheneumCapitalBalance}"
 					label="#{msgs.shareTableCapitalBalance}" required="true" />
 				<h:message for="atheneumCapitalBalance" />
 
 				<h:outputText value="#{msgs.shareTableCommonBalance}:" />
 				<h:inputText id="atheneumCommonBalance"
-					value="#{shareTablePCB.shareTable.atheneumCommonBalance}"
+					value="#{cc.attrs.shareTableController.shareTable.atheneumCommonBalance}"
 					label="#{msgs.shareTableCommonBalance}" required="true" />
 				<h:message for="atheneumCommonBalance" />
 
 				<h:outputText value="#{msgs.shareTablePersonnel}:" />
 				<h:inputText id="personnel"
-					value="#{shareTablePCB.shareTable.personnel}"
+					value="#{cc.attrs.shareTableController.shareTable.personnel}"
 					label="#{msgs.shareTablePersonnel}" required="true" />
 				<h:message for="personnel" />
 
 				<h:outputText value="#{msgs.shareTableStructures}:" />
 				<h:inputText id="structures"
-					value="#{shareTablePCB.shareTable.structures}"
+					value="#{cc.attrs.shareTableController.shareTable.structures}"
 					label="#{msgs.shareTableStructures}" required="true" />
 				<h:message for="structures" />
 
 				<h:outputText value="#{msgs.shareTableGoods}:" />
 				<h:inputText id="goodsAndServices"
-					value="#{shareTablePCB.shareTable.goodsAndServices}"
+					value="#{cc.attrs.shareTableController.shareTable.goodsAndServices}"
 					label="#{msgs.shareTableGoods}" required="true" />
 				<h:message for="goodsAndServices" />
 
 				<h:outputText value="#{msgs.shareTableTrip}:" />
 				<h:inputText id="businessTrip"
-					value="#{shareTablePCB.shareTable.businessTrip}"
+					value="#{cc.attrs.shareTableController.shareTable.businessTrip}"
 					label="#{msgs.shareTableTrip}" required="true" />
 				<h:message for="businessTrip" />
 
 				<h:outputText value="#{msgs.shareTableConsMaterials}:" />
 				<h:inputText id="consumerMaterials"
-					value="#{shareTablePCB.shareTable.consumerMaterials}"
+					value="#{cc.attrs.shareTableController.shareTable.consumerMaterials}"
 					label="#{msgs.shareTableConsMaterials}" required="true" />
 				<h:message for="consumerMaterials" />
 
 				<h:outputText value="#{msgs.shareTableInvMaterials}:" />
 				<h:inputText id="inventoryMaterials"
-					value="#{shareTablePCB.shareTable.inventoryMaterials}"
+					value="#{cc.attrs.shareTableController.shareTable.inventoryMaterials}"
 					label="#{msgs.shareTableInvMaterials}" required="true" />
 				<h:message for="inventoryMaterials" />
 
 				<h:outputText value="#{msgs.shareTableRentals}:" />
 				<h:inputText id="rentals"
-					value="#{shareTablePCB.shareTable.rentals}"
+					value="#{cc.attrs.shareTableController.shareTable.rentals}"
 					label="#{msgs.shareTableRentals}" required="true" />
 				<h:message for="rentals" />
 
 				<h:outputText value="#{msgs.shareTableContrPersonnel}:" />
 				<h:inputText id="personnelOnContract"
-					value="#{shareTablePCB.shareTable.personnelOnContract}"
+					value="#{cc.attrs.shareTableController.shareTable.personnelOnContract}"
 					label="#{msgs.shareTableContrPersonnel}" required="true" />
 				<h:message for="personnelOnContract" />
 
 				<h:outputText value="#{msgs.shareTableOtherCosts}:" />
 				<h:inputText id="otherCost"
-					value="#{shareTablePCB.shareTable.otherCost}"
+					value="#{cc.attrs.shareTableController.shareTable.otherCost}"
 					label="#{msgs.shareTableOtherCosts}" required="true" />
 				<h:message for="otherCost" />
 
 				<h:inputHidden value="needed" id="percentsCheck"
-					validator="#{shareTablePCB.validate}" />
+					validator="#{cc.attrs.shareTableController.validate}" />
 				<h:message styleClass="errorMessage" for="percentsCheck" />
 
 			</h:panelGrid>
 		</p:panel>
 
-		<p:dataTable id="personnelShares" value="#{shareTablePCB.shares}"
+		<p:dataTable id="personnelShares" value="#{cc.attrs.shareTableController.shares}"
 			var="share" selectionMode="single"
-			selection="#{shareTablePCB.selectedShare}"
+			selection="#{cc.attrs.shareTableController.selectedShare}"
 			rowKey="#{share}">
 
 			<f:facet name="header">
@@ -112,10 +120,10 @@
 
 				<f:facet name="footer">
 					<p:commandButton value="#{msgs.add}"
-						action="#{shareTablePCB.addRow()}" update="personnelShares"
+						action="#{cc.attrs.shareTableController.addRow()}" update="personnelShares"
 						immediate="true" />
 					<p:commandButton value="#{msgs.remove}"
-						action="#{shareTablePCB.removeRow()}" update="personnelShares"
+						action="#{cc.attrs.shareTableController.removeRow()}" update="personnelShares"
 						immediate="true" />
 				</f:facet>
 			</p:column>
@@ -132,6 +140,7 @@
 			</p:column>
 		</p:dataTable>
 
-	</p:tab>
 
-</ui:composition>
+	</composite:implementation>
+
+</html>
