--- a/Jama/src/main/webapp/resources/sections/wizShareTable.xhtml
+++ b/Jama/src/main/webapp/resources/sections/wizShareTable.xhtml
@@ -4,143 +4,141 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:composite="http://java.sun.com/jsf/composite">
-	
-	<composite:interface>
-		<composite:attribute name="shareTableController"></composite:attribute>
-		
-	
-	</composite:interface>
-	
-	<composite:implementation>
+
+<composite:interface>
+	<composite:attribute name="shareTableController"></composite:attribute>
+
+
+</composite:interface>
+
+<composite:implementation>
 
 
 
-		<p:panel header="Tabella di ripartizione">
+	<p:panel header="Tabella di ripartizione">
 
-			<h:panelGrid columns="3" columnClasses="label, value, errorMessage"
-				styleClass="grid">
+		<h:panelGrid columns="3" columnClasses="label, value, errorMessage"
+			styleClass="grid">
 
 
-				<h:outputText value="#{msgs.shareTableCapitalBalance}:" />
-				<h:inputText id="atheneumCapitalBalance"
-					value="#{cc.attrs.shareTableController.shareTable.atheneumCapitalBalance}"
-					label="#{msgs.shareTableCapitalBalance}" required="true" />
-				<h:message for="atheneumCapitalBalance" />
+			<h:outputText value="#{msgs.shareTableCapitalBalance}:" />
+			<h:inputText id="atheneumCapitalBalance"
+				value="#{cc.attrs.shareTableController.shareTable.atheneumCapitalBalance}"
+				label="#{msgs.shareTableCapitalBalance}" required="true" />
+			<h:message for="atheneumCapitalBalance" />
 
-				<h:outputText value="#{msgs.shareTableCommonBalance}:" />
-				<h:inputText id="atheneumCommonBalance"
-					value="#{cc.attrs.shareTableController.shareTable.atheneumCommonBalance}"
-					label="#{msgs.shareTableCommonBalance}" required="true" />
-				<h:message for="atheneumCommonBalance" />
+			<h:outputText value="#{msgs.shareTableCommonBalance}:" />
+			<h:inputText id="atheneumCommonBalance"
+				value="#{cc.attrs.shareTableController.shareTable.atheneumCommonBalance}"
+				label="#{msgs.shareTableCommonBalance}" required="true" />
+			<h:message for="atheneumCommonBalance" />
 
-				<h:outputText value="#{msgs.shareTablePersonnel}:" />
-				<h:inputText id="personnel"
-					value="#{cc.attrs.shareTableController.shareTable.personnel}"
-					label="#{msgs.shareTablePersonnel}" required="true" />
-				<h:message for="personnel" />
+			<h:outputText value="#{msgs.shareTablePersonnel}:" />
+			<h:inputText id="personnel"
+				value="#{cc.attrs.shareTableController.shareTable.personnel}"
+				label="#{msgs.shareTablePersonnel}" required="true" />
+			<h:message for="personnel" />
 
-				<h:outputText value="#{msgs.shareTableStructures}:" />
-				<h:inputText id="structures"
-					value="#{cc.attrs.shareTableController.shareTable.structures}"
-					label="#{msgs.shareTableStructures}" required="true" />
-				<h:message for="structures" />
+			<h:outputText value="#{msgs.shareTableStructures}:" />
+			<h:inputText id="structures"
+				value="#{cc.attrs.shareTableController.shareTable.structures}"
+				label="#{msgs.shareTableStructures}" required="true" />
+			<h:message for="structures" />
 
-				<h:outputText value="#{msgs.shareTableGoods}:" />
-				<h:inputText id="goodsAndServices"
-					value="#{cc.attrs.shareTableController.shareTable.goodsAndServices}"
-					label="#{msgs.shareTableGoods}" required="true" />
-				<h:message for="goodsAndServices" />
+			<h:outputText value="#{msgs.shareTableGoods}:" />
+			<h:inputText id="goodsAndServices"
+				value="#{cc.attrs.shareTableController.shareTable.goodsAndServices}"
+				label="#{msgs.shareTableGoods}" required="true" />
+			<h:message for="goodsAndServices" />
 
-				<h:outputText value="#{msgs.shareTableTrip}:" />
-				<h:inputText id="businessTrip"
-					value="#{cc.attrs.shareTableController.shareTable.businessTrip}"
-					label="#{msgs.shareTableTrip}" required="true" />
-				<h:message for="businessTrip" />
+			<h:outputText value="#{msgs.shareTableTrip}:" />
+			<h:inputText id="businessTrip"
+				value="#{cc.attrs.shareTableController.shareTable.businessTrip}"
+				label="#{msgs.shareTableTrip}" required="true" />
+			<h:message for="businessTrip" />
 
-				<h:outputText value="#{msgs.shareTableConsMaterials}:" />
-				<h:inputText id="consumerMaterials"
-					value="#{cc.attrs.shareTableController.shareTable.consumerMaterials}"
-					label="#{msgs.shareTableConsMaterials}" required="true" />
-				<h:message for="consumerMaterials" />
+			<h:outputText value="#{msgs.shareTableConsMaterials}:" />
+			<h:inputText id="consumerMaterials"
+				value="#{cc.attrs.shareTableController.shareTable.consumerMaterials}"
+				label="#{msgs.shareTableConsMaterials}" required="true" />
+			<h:message for="consumerMaterials" />
 
-				<h:outputText value="#{msgs.shareTableInvMaterials}:" />
-				<h:inputText id="inventoryMaterials"
-					value="#{cc.attrs.shareTableController.shareTable.inventoryMaterials}"
-					label="#{msgs.shareTableInvMaterials}" required="true" />
-				<h:message for="inventoryMaterials" />
+			<h:outputText value="#{msgs.shareTableInvMaterials}:" />
+			<h:inputText id="inventoryMaterials"
+				value="#{cc.attrs.shareTableController.shareTable.inventoryMaterials}"
+				label="#{msgs.shareTableInvMaterials}" required="true" />
+			<h:message for="inventoryMaterials" />
 
-				<h:outputText value="#{msgs.shareTableRentals}:" />
-				<h:inputText id="rentals"
-					value="#{cc.attrs.shareTableController.shareTable.rentals}"
-					label="#{msgs.shareTableRentals}" required="true" />
-				<h:message for="rentals" />
+			<h:outputText value="#{msgs.shareTableRentals}:" />
+			<h:inputText id="rentals"
+				value="#{cc.attrs.shareTableController.shareTable.rentals}"
+				label="#{msgs.shareTableRentals}" required="true" />
+			<h:message for="rentals" />
 
-				<h:outputText value="#{msgs.shareTableContrPersonnel}:" />
-				<h:inputText id="personnelOnContract"
-					value="#{cc.attrs.shareTableController.shareTable.personnelOnContract}"
-					label="#{msgs.shareTableContrPersonnel}" required="true" />
-				<h:message for="personnelOnContract" />
+			<h:outputText value="#{msgs.shareTableContrPersonnel}:" />
+			<h:inputText id="personnelOnContract"
+				value="#{cc.attrs.shareTableController.shareTable.personnelOnContract}"
+				label="#{msgs.shareTableContrPersonnel}" required="true" />
+			<h:message for="personnelOnContract" />
 
-				<h:outputText value="#{msgs.shareTableOtherCosts}:" />
-				<h:inputText id="otherCost"
-					value="#{cc.attrs.shareTableController.shareTable.otherCost}"
-					label="#{msgs.shareTableOtherCosts}" required="true" />
-				<h:message for="otherCost" />
+			<h:outputText value="#{msgs.shareTableOtherCosts}:" />
+			<h:inputText id="otherCost"
+				value="#{cc.attrs.shareTableController.shareTable.otherCost}"
+				label="#{msgs.shareTableOtherCosts}" required="true" />
+			<h:message for="otherCost" />
 
-				<h:inputHidden value="needed" id="percentsCheck"
-					validator="#{cc.attrs.shareTableController.validate}" />
-				<h:message styleClass="errorMessage" for="percentsCheck" />
+			<h:inputHidden value="needed" id="percentsCheck"
+				validator="#{cc.attrs.shareTableController.validate}" />
+			<h:message styleClass="errorMessage" for="percentsCheck" />
 
-			</h:panelGrid>
-		</p:panel>
+		</h:panelGrid>
+	</p:panel>
 
-		<p:dataTable id="personnelShares" value="#{cc.attrs.shareTableController.shares}"
-			var="share" selectionMode="single"
-			selection="#{cc.attrs.shareTableController.selectedShare}"
-			rowKey="#{share}">
+	<p:dataTable id="personnelShares"
+		value="#{cc.attrs.shareTableController.shares}" var="share"
+		selectionMode="single"
+		selection="#{cc.attrs.shareTableController.selectedShare}"
+		rowKey="#{share}">
 
-			<f:facet name="header">
+		<f:facet name="header">
 				#{msgs.shareTablePersonnel}
 			</f:facet>
 
-			<p:column>
-				<f:facet name="header">
+		<p:column>
+			<f:facet name="header">
 					#{msgs.chief}
 				</f:facet>
 
-				<p:selectOneMenu id="chiefMenu" value="#{share.chiefScientist}"
-					label="#{msgs.chief}" required="true" filter="true"
-					filterMatchMode="contains">
-					<f:selectItem itemLabel="Selezionare" itemValue="#{null}"
-						noSelectionOption="true" />
-					<f:selectItems value="#{utilPB.chiefItems}" />
-					<f:converter binding="#{chiefConverterPersonnelShare}" />
-					<p:ajax process="@this" />
-				</p:selectOneMenu>
+			<p:selectOneMenu id="chiefMenu" value="#{share.chiefScientist}"
+				label="#{msgs.chief}" filter="true" filterMatchMode="contains">
+				<f:selectItem itemLabel="Selezionare" itemValue="#{null}" />
+				<f:selectItems value="#{utilPB.chiefItems}" />
+				<f:converter binding="#{chiefConverterPersonnelShare}" />
+				<p:ajax process="@this" />
+			</p:selectOneMenu>
 
-				<f:facet name="footer">
-					<p:commandButton value="#{msgs.add}"
-						action="#{cc.attrs.shareTableController.addRow()}" update="personnelShares"
-						immediate="true" />
-					<p:commandButton value="#{msgs.remove}"
-						action="#{cc.attrs.shareTableController.removeRow()}" update="personnelShares"
-						immediate="true" />
-				</f:facet>
-			</p:column>
+			<f:facet name="footer">
+				<p:commandButton value="#{msgs.add}"
+					action="#{cc.attrs.shareTableController.addRow()}"
+					update="personnelShares" process="personnelShares, @this" />
+				<p:commandButton value="#{msgs.remove}"
+					action="#{cc.attrs.shareTableController.removeRow()}"
+					update="personnelShares" process="personnelShares, @this" />
+			</f:facet>
+		</p:column>
 
-			<p:column>
-				<f:facet name="header">
+		<p:column>
+			<f:facet name="header">
 					#{msgs.share}
-				</f:facet>
+			</f:facet>
 
-				<h:inputText id="share" value="#{share.share}" label="#{msgs.share}"
-					required="true">
-					<p:ajax process="@this" />
-				</h:inputText>
-			</p:column>
-		</p:dataTable>
+			<h:inputText id="share" value="#{share.share}" label="#{msgs.share}"
+				required="true">
+				<p:ajax process="@this" />
+			</h:inputText>
+		</p:column>
+	</p:dataTable>
 
-
-	</composite:implementation>
+</composite:implementation>
 
 </html>
