commit di protezione

--- a/Jama/src/main/webapp/agreementList.xhtml
+++ b/Jama/src/main/webapp/agreementList.xhtml
@@ -61,7 +61,7 @@
 							</p:calendar>
 						</div>
 						<p:commandButton value="#{msgs.filter}" onclick="w_agrTable.filter()" />
-						<p:commandButton value="#{msgs.reset}" onclick="w_firstDate.setDate(null); w_lastDate.setDate(null);" />
+						<p:commandButton value="#{msgs.reset}" onclick="w_firstDate.setDate(null); w_lastDate.setDate(null); w_agrTable.filter();" />
 					</h:form>
 				</f:facet>
 				
