--- a/Jama/src/main/webapp/resources/sections/agreementWizAttachments.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWizAttachments.xhtml
@@ -17,7 +17,7 @@
 
 			</h:panelGrid>
 			
-			<p:commandButton value="#{msgs.save}" action="#{agreementWizardPCB.save()}" ajax="false"/>
+			<p:commandButton value="#{msgs.save}" action="#{agreementManager.save()}" ajax="false"/>
 			
 
 
