--- a/Jama/src/main/webapp/resources/sections/installmentWiz.xhtml
+++ b/Jama/src/main/webapp/resources/sections/installmentWiz.xhtml
@@ -25,7 +25,7 @@
 
 				<p:tab id="tabRip" title="Passo 2">
 					<sections:wizShareTable
-						shareTableController="#{agreementWizardPCB.shareTableController}" />
+						shareTableController="#{installmentWizardPCB.shareTableController}" />
 				</p:tab>
 
 				<ui:include src="/resources/sections/installmentLastStep.xhtml" />
