--- a/Jama/src/main/webapp/resources/sections/agreementWizData.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWizData.xhtml
@@ -39,11 +39,13 @@
 							label="#{msgs.protocolNumber}" required="true">
 							<f:convertNumber minIntegerDigits="6" maxIntegerDigits="6"
 								integerOnly="true" />
+							<f:ajax event="blur" execute="@this" render="protocolNumberError" />
 						</h:inputText>
 					</p:column>
 
 					<p:column colspan="2">
-						<h:message class="errorMessage" for="protocolNumber" />
+						<h:message class="errorMessage" id="protocolNumberError"
+							for="protocolNumber" />
 					</p:column>
 				</p:row>
 
@@ -71,12 +73,14 @@
 							value="#{agreementWizardPCB.agreement.type}"
 							label="#{msgs.agrType}" required="true">
 							<f:selectItems value="#{utilPB.agreementTypeItems}" />
+							<f:ajax event="blur" execute="@this" render="typeError" />
+
 						</h:selectOneMenu>
 					</p:column>
 
 
 					<p:column colspan="2">
-						<h:message class="errorMessage" for="type" />
+						<h:message class="errorMessage" id="typeError" for="type" />
 					</p:column>
 				</p:row>
 
@@ -90,10 +94,11 @@
 					<p:column>
 						<p:selectOneMenu id="chiefMenu"
 							value="#{agreementWizardPCB.agreement.chief}"
-							label="#{msgs.chief}" required="true"
-							filter="true" filterMatchMode="contains">
+							label="#{msgs.chief}" required="true" filter="true"
+							filterMatchMode="contains">
 							<f:selectItems value="#{utilPB.chiefItems}" />
 							<f:converter binding="#{chiefConverter}" />
+
 						</p:selectOneMenu>
 					</p:column>
 
@@ -170,11 +175,15 @@
 					<p:column>
 						<h:inputText id="projectNumber"
 							value="#{agreementWizardPCB.agreement.CIA_projectNumber}"
-							label="#{msgs.projectNumber}" required="true" />
+							label="#{msgs.projectNumber}" required="true">
+							<f:ajax event="blur" execute="@this" render="projectNumberError" />
+						</h:inputText>
+
 					</p:column>
 
 					<p:column colspan="2">
-						<h:message class="errorMessage" for="projectNumber" />
+						<h:message class="errorMessage" id="projectNumberError"
+							for="projectNumber" />
 					</p:column>
 				</p:row>
 
@@ -188,11 +197,14 @@
 					<p:column>
 						<h:inputText id="inventoryNumber"
 							value="#{agreementWizardPCB.agreement.inventoryNumber}"
-							label="#{msgs.agrInventory}" required="true" />
+							label="#{msgs.agrInventory}" required="true">
+							<f:ajax event="blur" execute="@this" render="inventoryNumberError" />
+
+						</h:inputText>
 					</p:column>
 
 					<p:column colspan="2">
-						<h:message class="errorMessage" for="inventoryNumber" />
+						<h:message class="errorMessage" id="inventoryNumberError" for="inventoryNumber" />
 					</p:column>
 				</p:row>
 
@@ -267,8 +279,8 @@
 
 					<p:column>
 						<p:calendar id="approvalDate" pattern="dd/MM/yyyy"
-							readonlyInput="true" showOn="both"
-							showOtherMonths="true" required="true"
+							readonlyInput="true" showOn="both" showOtherMonths="true"
+							required="true"
 							value="#{agreementWizardPCB.agreement.approvalDate}">
 							<f:convertDateTime type="date" pattern="dd/MM/yyyy" />
 						</p:calendar>
@@ -288,9 +300,8 @@
 
 					<p:column>
 						<p:calendar id="beginDate" pattern="dd/MM/yyyy"
-							readonlyInput="true" showOn="both"
-							showOtherMonths="true" required="true"
-							value="#{agreementWizardPCB.agreement.beginDate}">
+							readonlyInput="true" showOn="both" showOtherMonths="true"
+							required="true" value="#{agreementWizardPCB.agreement.beginDate}">
 							<f:convertDateTime type="date" pattern="dd/MM/yyyy" />
 						</p:calendar>
 					</p:column>
@@ -309,8 +320,8 @@
 
 					<p:column>
 						<p:calendar id="deadlineDate" pattern="dd/MM/yyyy"
-							readonlyInput="true" showOn="both"
-							showOtherMonths="true" required="true"
+							readonlyInput="true" showOn="both" showOtherMonths="true"
+							required="true"
 							value="#{agreementWizardPCB.agreement.deadlineDate}">
 							<f:convertDateTime type="date" pattern="dd/MM/yyyy" />
 						</p:calendar>
