--- a/Jama/src/main/webapp/resources/sections/wizShareTable.xhtml
+++ b/Jama/src/main/webapp/resources/sections/wizShareTable.xhtml
@@ -7,6 +7,8 @@
 
 <composite:interface>
 	<composite:attribute name="shareTableController"></composite:attribute>
+	<composite:attribute name="wholeAmount"></composite:attribute>
+
 
 
 </composite:interface>
@@ -24,68 +26,103 @@
 			<h:outputText value="#{msgs.shareTableCapitalBalance}:" />
 			<h:inputText id="atheneumCapitalBalance"
 				value="#{cc.attrs.shareTableController.shareTable.atheneumCapitalBalance}"
-				label="#{msgs.shareTableCapitalBalance}" required="true" />
-			<h:message for="atheneumCapitalBalance" />
+				label="#{msgs.shareTableCapitalBalance}" required="true">
+				<f:ajax event="blur" execute="@this"
+					render="atheneumCapitalBalanceError" />
+
+			</h:inputText>
+			<h:message id="atheneumCapitalBalanceError"
+				for="atheneumCapitalBalance" />
 
 			<h:outputText value="#{msgs.shareTableCommonBalance}:" />
 			<h:inputText id="atheneumCommonBalance"
 				value="#{cc.attrs.shareTableController.shareTable.atheneumCommonBalance}"
-				label="#{msgs.shareTableCommonBalance}" required="true" />
-			<h:message for="atheneumCommonBalance" />
+				label="#{msgs.shareTableCommonBalance}" required="true">
+				<f:ajax event="blur" execute="@this"
+					render="atheneumCommonBalanceError" />
+			</h:inputText>
+			<h:message for="atheneumCommonBalance" id="atheneumCommonBalanceError" />
 
 			<h:outputText value="#{msgs.shareTablePersonnel}:" />
 			<h:inputText id="personnel"
 				value="#{cc.attrs.shareTableController.shareTable.personnel}"
-				label="#{msgs.shareTablePersonnel}" required="true" />
-			<h:message for="personnel" />
+				label="#{msgs.shareTablePersonnel}" required="true" >
+					<f:ajax event="blur" execute="@this"
+					render="personnelError" />
+				</h:inputText>
+			<h:message for="personnel" id="personnelError"/>
 
 			<h:outputText value="#{msgs.shareTableStructures}:" />
 			<h:inputText id="structures"
 				value="#{cc.attrs.shareTableController.shareTable.structures}"
-				label="#{msgs.shareTableStructures}" required="true" />
-			<h:message for="structures" />
+				label="#{msgs.shareTableStructures}" required="true" >
+					<f:ajax event="blur" execute="@this"
+					render="structuresError" />
+				</h:inputText>
+			<h:message for="structures" id="structuresError"/>
 
 			<h:outputText value="#{msgs.shareTableGoods}:" />
 			<h:inputText id="goodsAndServices"
 				value="#{cc.attrs.shareTableController.shareTable.goodsAndServices}"
-				label="#{msgs.shareTableGoods}" required="true" />
-			<h:message for="goodsAndServices" />
+				label="#{msgs.shareTableGoods}" required="true" >
+				<f:ajax event="blur" execute="@this"
+					render="goodsAndServicesError" />
+				</h:inputText>
+			<h:message for="goodsAndServices" id="goodsAndServicesError" />
 
 			<h:outputText value="#{msgs.shareTableTrip}:" />
 			<h:inputText id="businessTrip"
 				value="#{cc.attrs.shareTableController.shareTable.businessTrip}"
-				label="#{msgs.shareTableTrip}" required="true" />
-			<h:message for="businessTrip" />
+				label="#{msgs.shareTableTrip}" required="true" >
+					<f:ajax event="blur" execute="@this"
+					render="businessTripError" />
+				</h:inputText>
+			<h:message for="businessTrip" id="businessTripError"/>
 
 			<h:outputText value="#{msgs.shareTableConsMaterials}:" />
 			<h:inputText id="consumerMaterials"
 				value="#{cc.attrs.shareTableController.shareTable.consumerMaterials}"
-				label="#{msgs.shareTableConsMaterials}" required="true" />
-			<h:message for="consumerMaterials" />
+				label="#{msgs.shareTableConsMaterials}" required="true" >
+				<f:ajax event="blur" execute="@this"
+					render="consumerMaterialsError" />
+				</h:inputText>
+			<h:message for="consumerMaterials" id="consumerMaterialsError" />
 
 			<h:outputText value="#{msgs.shareTableInvMaterials}:" />
 			<h:inputText id="inventoryMaterials"
 				value="#{cc.attrs.shareTableController.shareTable.inventoryMaterials}"
-				label="#{msgs.shareTableInvMaterials}" required="true" />
-			<h:message for="inventoryMaterials" />
+				label="#{msgs.shareTableInvMaterials}" required="true" >
+				<f:ajax event="blur" execute="@this"
+					render="inventoryMaterialsError" />
+				</h:inputText>
+			<h:message for="inventoryMaterials" id="inventoryMaterialsError"/>
 
 			<h:outputText value="#{msgs.shareTableRentals}:" />
 			<h:inputText id="rentals"
 				value="#{cc.attrs.shareTableController.shareTable.rentals}"
-				label="#{msgs.shareTableRentals}" required="true" />
-			<h:message for="rentals" />
+				label="#{msgs.shareTableRentals}" required="true" >
+				<f:ajax event="blur" execute="@this"
+					render="rentalsError" />
+				</h:inputText>
+			<h:message for="rentals" id="rentalsError" />
 
 			<h:outputText value="#{msgs.shareTableContrPersonnel}:" />
 			<h:inputText id="personnelOnContract"
 				value="#{cc.attrs.shareTableController.shareTable.personnelOnContract}"
-				label="#{msgs.shareTableContrPersonnel}" required="true" />
-			<h:message for="personnelOnContract" />
+				label="#{msgs.shareTableContrPersonnel}" required="true" >
+				<f:ajax event="blur" execute="@this"
+					render="personnelOnContractError" />
+				</h:inputText>
+			<h:message for="personnelOnContract" id="personnelOnContractError" />
 
 			<h:outputText value="#{msgs.shareTableOtherCosts}:" />
 			<h:inputText id="otherCost"
 				value="#{cc.attrs.shareTableController.shareTable.otherCost}"
-				label="#{msgs.shareTableOtherCosts}" required="true" />
-			<h:message for="otherCost" />
+				label="#{msgs.shareTableOtherCosts}" required="true" >
+				<f:ajax event="blur" execute="@this"
+					render="otherCostError" />
+				</h:inputText>
+			<h:message for="otherCost" id="otherCostError"/>
 
 			<h:inputHidden value="needed" id="percentsCheck"
 				validator="#{cc.attrs.shareTableController.validate}" />
@@ -110,8 +147,7 @@
 				</f:facet>
 
 			<p:selectOneMenu id="chiefMenu" value="#{share.chiefScientist}"
-				label="#{msgs.chief}" filter="true"
-				filterMatchMode="contains">
+				label="#{msgs.chief}" filter="true" filterMatchMode="contains">
 				<f:selectItem itemLabel="Selezionare" itemValue="#{null}" />
 				<f:selectItems value="#{utilPB.chiefItems}" />
 				<f:converter binding="#{chiefConverterPersonnelShare}" />
@@ -121,12 +157,10 @@
 			<f:facet name="footer">
 				<p:commandButton value="#{msgs.add}"
 					action="#{cc.attrs.shareTableController.addRow()}"
-					update="personnelShares"
-					process="personnelShares, @this" />
+					update="personnelShares" process="personnelShares, @this" />
 				<p:commandButton value="#{msgs.remove}"
 					action="#{cc.attrs.shareTableController.removeRow()}"
-					update="personnelShares"
-					process="personnelShares, @this" />
+					update="personnelShares" process="personnelShares, @this" />
 			</f:facet>
 		</p:column>
 
