--- a/Jama/src/main/webapp/agreementList.xhtml
+++ b/Jama/src/main/webapp/agreementList.xhtml
@@ -5,33 +5,43 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
 
-<h:head></h:head>
+<h:head>
+	<h:outputStylesheet name="home.css" library="css" />
+
+	<script type="text/javascript">
+		jQuery(document).ready(function(){
+			jQuery('#agreementTable tr')
+				.mouseover(function(){
+								jQuery(this).find(".agr-list-button").show();
+							})
+				.mouseout(function(){
+								jQuery(this).find(".agr-list-button").hide();
+							});
+			});
+	</script>
+</h:head>
 <h:body>
 
-	<h:form>
+	<h:form prependId="false">
 		<input type="hidden" name="cid"
-				value='#{agreementListPB.conversation.id}' />
-				
-		<p:contextMenu for="agreementTable">  
-	        <p:menuitem value="#{msgs.view}" outcome="done" icon="ui-icon-search" />  
-	        <p:menuitem value="#{msgs.edit}" outcome="cancel" icon="ui-icon-edit"/>  
-	    </p:contextMenu> 
+			value='#{agreementListPB.conversation.id}' />
 
-		<p:dataTable id="agreementTable" var="agr" widgetVar="w_agrTable" lazy="true" 
-			value="#{agreementListPB.lazyModel}" emptyMessage="#{msgs.noAgrFound}"
-			paginator="true" rows="10" rowsPerPageTemplate="5,10,15" 
+		<ui:remove>
+			<p:contextMenu for="agreementTable">
+				<p:menuitem value="#{msgs.view}" outcome="done"
+					icon="ui-icon-search" />
+				<p:menuitem value="#{msgs.edit}" outcome="cancel"
+					icon="ui-icon-wrench" />
+			</p:contextMenu>
+		</ui:remove>
+
+		<p:dataTable id="agreementTable" var="agr" widgetVar="w_agrTable"
+			lazy="true" value="#{agreementListPB.lazyModel}"
+			emptyMessage="#{msgs.noAgrFound}" paginator="true" rows="10"
+			rowsPerPageTemplate="5,10,15"
 			paginatorTemplate="{RowsPerPageDropdown} {PreviousPageLink} {NextPageLink}"
-			selection="#{agreementListPB.selectedValue}" selectionMode="single" rowKey="#{agr.id}">
-
-			<ui:remove>
-			<f:facet name="header">
-				<p:outputPanel>
-					<h:outputText value="#{msgs.search}:" />
-					<p:inputText id="globalFilter" onkeyup="w_agrTable.filter()"
-						style="width:150px" />
-				</p:outputPanel>
-			</f:facet>
-			</ui:remove>
+			selection="#{agreementListPB.selectedValue}" selectionMode="single"
+			rowKey="#{agr.id}">
 
 			<p:column id="chiefColumn" filterBy="#{agr.chief.id}"
 				headerText="#{msgs.chief}" filterMatchMode="exact"
@@ -45,35 +55,52 @@
 				<h:outputText value="#{agr.company.name}" />
 			</p:column>
 
-			<p:column id="dateColumn">
+			<p:column id="dateColumn" styleClass="button-left-column">
 				<f:facet name="header">
 	                	#{msgs.approvalDate}  
 					<h:form id="calendarFilters">
-					    <div style="display: block; width: 90%; margin: auto;">
-							<p:calendar id="firstDate" styleClass="calendarFilter" widgetVar="w_firstDate"
-								value="#{agreementListPB.lazyModel.filterMinDate}" pattern="dd/MM/yyyy"
-								readonlyInput="true" showOn="both" showOtherMonths="true">
+						<div style="display: block; width: 90%; margin: auto;">
+							<p:calendar id="firstDate" styleClass="calendarFilter"
+								widgetVar="w_firstDate"
+								value="#{agreementListPB.lazyModel.filterMinDate}"
+								pattern="dd/MM/yyyy" readonlyInput="true" showOn="both"
+								showOtherMonths="true">
 							</p:calendar>
 							-
-							<p:calendar id="lastDate" styleClass="calendarFilter" widgetVar="w_lastDate"
-								value="#{agreementListPB.lazyModel.filterMaxDate}" pattern="dd/MM/yyyy"
-								readonlyInput="true" showOn="both" showOtherMonths="true">
+							<p:calendar id="lastDate" styleClass="calendarFilter"
+								widgetVar="w_lastDate"
+								value="#{agreementListPB.lazyModel.filterMaxDate}"
+								pattern="dd/MM/yyyy" readonlyInput="true" showOn="both"
+								showOtherMonths="true">
 							</p:calendar>
 						</div>
-						<p:commandButton value="#{msgs.filter}" onclick="w_agrTable.filter()" />
-						<p:commandButton value="#{msgs.reset}" onclick="w_firstDate.setDate(null); w_lastDate.setDate(null); w_agrTable.filter();" />
+						<p:commandButton value="#{msgs.filter}"
+							onclick="w_agrTable.filter()" />
+						<p:commandButton value="#{msgs.reset}"
+							onclick="w_firstDate.setDate(null); w_lastDate.setDate(null); w_agrTable.filter();" />
 					</h:form>
 				</f:facet>
-				
-				<h:outputText value="#{agr.approvalDate}" />
+
+				<h:outputText value="#{agr.approvalDate}">
+					<f:convertDateTime locale="it" dateStyle="full" />
+				</h:outputText>
+			</p:column>
+
+			<p:column styleClass="button-right-column button-column">
+				<p:button styleClass="agr-list-button" icon="ui-icon-search"
+					outcome="done" />
+				<p:button styleClass="agr-list-button" icon="ui-icon-wrench"
+					outcome="cancel" />
 			</p:column>
 
 		</p:dataTable>
-		
-		<h:commandButton action="#{agreementListPB.backToHome()}" value="Home" immediate="true"/> 
+
+
+		<h:commandButton action="#{agreementListPB.backToHome()}" value="Home"
+			immediate="true" />
 
 	</h:form>
-	
-	
+
+
 </h:body>
 </html>
