--- a/Jama/src/main/webapp/resources/sections/agreementWiz.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWiz.xhtml
@@ -32,7 +32,7 @@
 
 			</p:wizard>
 
-			<h:button value="#{msgs.cancel}" outcome="/home" immediate="true" />
+			<h:commandButton value="#{msgs.cancel}" action="#{agreementManager.cancel()}" immediate="true" />
 
 
 
